# AEGIS-v0.1-GUI-v0.1

./: .gitignore  QUICKSTART-VM.md  README.md  VM-SETUP.md  Vagrantfile  create-iso.sh  docker-compose.vm.yml  install-aegis-vm.sh
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/api/: mod.rs
backend/src/models/: mod.rs
backend/src/services/: compiler.rs  fuzzer.rs  logger.rs  mod.rs  sandbox.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: CodeLab.tsx  FuzzingConsole.tsx  SandboxRunner.tsx  SecurityTimeline.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
